--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Roboto+Condensed:wght@300&display=swap');
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Roboto Condensed', Arial, sans-serif;
+  margin: 64px 16px;
+}
+
 .main {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
 }
-.posts {
-  padding: 1em;
-  background-color: yellow;
+
+.thumbnail {
+  width: 150px;
+  margin-right: 16px;
 }
-.specific__post {
-  padding: 1em;
-  background-color: lightcoral;
+
+.thumbnail-container {
+  border-bottom: 1px solid #ededed;
+  display: flex;
+  align-items: baseline;
+  margin: 0 0 12px 0;
 }
-.mapped__posts {
-  padding: 1em;
-  background-color: lightpink;
+
+.error-message {
+  padding: 16px 0;
+  color: indianred;
+  border-radius: 8px;
 }
