add Subreddit page, dynamic menu, parse numbers to Dutch string + installation Readme

--- a/src/components/topnav/TopNav.css
+++ b/src/components/topnav/TopNav.css
@@ -2,8 +2,23 @@
     background-color: lightskyblue;
     padding: 1.5em;
     border-radius: 25px;
-    border: 2px lightskyblue solid;
+    border: 5px #FFF solid;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+.nav-container a {
+    color: crimson;
+    font-weight: bold;
+}
+
+.active-link {
+    padding: 1em;
+    border-radius: 10px;
+    background-color: #e7f5fe;
+}
+
+.nav-container a.active-link {
+    text-decoration: none;
 }
