--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,15 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: 'Roboto Condensed', Arial, sans-serif;
-  margin: 64px 16px;
+  margin: 30px 15px;
 }
 
 .main {
+  padding: 0.4em;
+  background-color: #e7f5fe;
+  border-radius: 25px;
+  min-width: 720px;
+  max-width: 800px;
   text-align: center;
 }
 
@@ -22,10 +27,8 @@ ul {
 }
 
 .thumbnail-container {
-  border-bottom: 1px solid #ededed;
   display: flex;
-  align-items: baseline;
-  margin: 0 0 12px 0;
+  margin: 0 0 15px 0;
 }
 
 .error-message {
