--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,12 +1,37 @@
+:root {
+    --svgcolor: white;
+}
+/*root = html pag.*/
+/*--svgcolor = variable for color*/
+
+svg.backnav {
+    width: 12px;
+    height: 20px;
+    fill: black;
+    stroke: var(--svgcolor);
+    margin-right: 1.5em;
+}
+
+button {
+    font-family: 'Roboto Condensed', Arial, sans-serif;
+}
+
 button.backnav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     padding: 0.5em;
     border: 0;
     border-radius: 25px;
     background-color: #000;
-    color: yellow;
+    color: #FFF;
     font-size: 1.2em;
+    cursor: pointer;
 }
-img.backnav {
-    fill: yellow;
-    stroke: red;
+
+button:hover svg.backnav,
+button:hover.backnav {
+    fill: aqua;
+    stroke: aqua;
+    color: aqua;
 }
