--- a/src/pages/subreddit/SubReddit.css
+++ b/src/pages/subreddit/SubReddit.css
@@ -6,6 +6,7 @@
 
 .subreddit__card {
     padding: 1.5em;
+    margin: 0 0 1em 0;
     border-radius: 25px;
     border: 5px lightskyblue solid;
     background-color: white;
